feat: implement immutability (using minio/S3 object locking)
